Remediate linting script omission
^That's my way of saying I forgot a period.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "lint": "eslint . && ec",
+    "lint": "eslint . && ec .",
     "test": "tsc && jest"
   },
   "devDependencies": {
