--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "/lib"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "npm run clean && tsc",
+    "clean": "rimraf lib",
+    "format": "eslint --fix .",
     "lint": "eslint . && ec .",
-    "test": "tsc && jest"
+    "test": "npm run build && jest"
   },
   "devDependencies": {
     "@jessety/eslint-config": "^1.0.6",
@@ -38,6 +40,7 @@
     "editorconfig-checker": "^3.3.0",
     "eslint": "^7.20.0",
     "jest": "^26.5.3",
+    "rimraf": "^3.0.2",
     "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
   }
