--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "build": "npm run clean && tsc",
     "clean": "rimraf lib",
-    "format": "eslint --fix .",
+    "format": "eslint --fix . && sort-package-json",
     "lint": "eslint . && ec .",
     "test": "npm run build && jest"
   },
@@ -41,6 +41,7 @@
     "eslint": "^7.20.0",
     "jest": "^26.5.3",
     "rimraf": "^3.0.2",
+    "sort-package-json": "^1.49.0",
     "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
   }
