--- a/jest.config.json
+++ b/jest.config.json
@@ -2,5 +2,5 @@
   "preset": "ts-jest",
   "testEnvironment": "node",
   "collectCoverage": true,
-  "collectCoverageFrom": ["lib/*"]
+  "collectCoverageFrom": ["lib/**/*.js"]
 }
