--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,12 +11,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Node
+        uses: actions/setup-node@v2
         with:
           node-version: 14.x
-      - run: npm install
-      - run: npm run build --if-present
+      - name: Install dependencies
+        run: npm install
+      - name: Build project
+        run: npm run build
+      - name: Archive build # https://github.com/actions/upload-artifact#maintaining-file-permissions-and-case-sensitive-files
+        run: tar -czvf lib.tar.gz ./lib
+      - name: Upload build
+        uses: actions/upload-artifact@v2
+        with:
+          name: build
+          path: ./lib.tar.gz
+          retention-days: 1
 
 # Comment out one of the following jobs to publish to only registry
 
@@ -31,12 +43,12 @@ jobs:
         with:
           node-version: 14.x
           registry-url: 'https://registry.npmjs.org'
-      - name: Install dependencies
-        run: npm install
-        env:
-          CI: true
-      - name: Build
-        run: npm run build --if-present
+      - name: Download build
+        uses: actions/download-artifact@v2
+        with:
+          name: build
+      - name: Unarchive build
+        run: tar -xzf ./lib.tar.gz
       - name: Publish
         run: npm publish
         env:
@@ -54,12 +66,12 @@ jobs:
           node-version: 14.x
           registry-url: https://npm.pkg.github.com/
           always-auth: true
-      - name: Install dependencies
-        run: npm install
-        env:
-          CI: true
-      - name: Build
-        run: npm run build --if-present
+      - name: Download build
+        uses: actions/download-artifact@v2
+        with:
+          name: build
+      - name: Unarchive build
+        run: tar -xzf ./lib.tar.gz
       - name: Publish
         run: npm publish
         env:
