--- a/package.json
+++ b/package.json
@@ -34,14 +34,15 @@
   "devDependencies": {
     "@jessety/eslint-config": "^2.0.1",
     "@types/jest": "^26.0.14",
-    "@types/node": "^14.14.31",
-    "editorconfig-checker": "^3.3.0",
+    "@types/node": "^15.6.1",
+    "editorconfig-checker": "^4.0.2",
     "eslint": "^7.20.0",
-    "jest": "^26.5.3",
+    "jest": "^27.0.3",
     "prettier": "^2.3.0",
     "rimraf": "^3.0.2",
     "sort-package-json": "^1.49.0",
     "ts-jest": "^26.5.1",
+    "ts-node": "^10.0.0",
     "typescript": "^4.1.5"
   }
 }
