--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,13 +15,31 @@ jobs:
           node-version: 14.x
       - name: Install dependencies
         run: npm install
-        env:
-          CI: true
       - name: Build
         run: npm run build
 
-  lint:
+  test:
     needs: build
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest] # macos-latest is prohibitively expensive, use sparingly
+        node: [16.x, 14.x, 12.x]
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Setup Node ${{ matrix.node }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node }}
+    - name: Install dependencies
+      run: npm install
+    - name: Run tests
+      run: npm run test
+
+  lint:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -32,29 +50,5 @@ jobs:
           node-version: 14.x
       - name: Install dependencies
         run: npm install
-        env:
-          CI: true
       - name: Lint
         run: npm run lint
-
-  test:
-    needs: build
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-latest] # macos-latest is prohibitively expensive, use sparingly
-        node: [14.x, 12.x]
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Setup Node ${{ matrix.node }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node }}
-    - name: Install dependencies
-      run: npm install
-      env:
-        CI: true
-    - name: Run tests
-      run: npm run test
