--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "format": "sort-package-json && prettier --write '**/*.{ts,js,json,yml,md}' && eslint --fix .",
     "lint": "eslint . && ec .",
     "test": "npm run build && jest",
-    "release:patch": "npm version patch && git push --follow-tags",
-    "release:minor": "npm version minor && git push --follow-tags",
-    "release:major": "npm version major && git push --follow-tags",
+    "release:patch": "npm version patch --no-commit-hooks && git push --follow-tags",
+    "release:minor": "npm version minor --no-commit-hooks && git push --follow-tags",
+    "release:major": "npm version major --no-commit-hooks && git push --follow-tags",
     "prepare": "husky install"
   },
   "devDependencies": {
