--- a/package.json
+++ b/package.json
@@ -29,16 +29,17 @@
     "clean": "rimraf lib",
     "format": "sort-package-json && prettier --write '**/*.{ts,js,json,yml,md}' && eslint --fix .",
     "lint": "eslint . && ec .",
-    "test": "npm run build && jest",
-    "release:patch": "npm version patch --no-commit-hooks && git push --follow-tags",
-    "release:minor": "npm version minor --no-commit-hooks && git push --follow-tags",
+    "prepare": "husky install",
     "release:major": "npm version major --no-commit-hooks && git push --follow-tags",
-    "prepare": "husky install"
+    "release:minor": "npm version minor --no-commit-hooks && git push --follow-tags",
+    "release:patch": "npm version patch --no-commit-hooks && git push --follow-tags",
+    "test": "npm run build && jest"
   },
   "devDependencies": {
-    "@jessety/eslint-config": "^2.0.1",
-    "@types/jest": "^26.0.14",
-    "@types/node": "^15.6.1",
+    "@jessety/eslint-config": "^2.2.2",
+    "@jessety/prettier-config": "^1.1.0",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.4",
     "editorconfig-checker": "^4.0.2",
     "eslint": "^7.20.0",
     "husky": "^7.0.0",
@@ -46,7 +47,7 @@
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.0",
     "rimraf": "^3.0.2",
-    "sort-package-json": "^1.49.0",
+    "sort-package-json": "^1.52.0",
     "ts-jest": "^27.0.1",
     "typescript": "^4.1.5"
   }
